test/files/neg/view-bounds-deprecation.check
view-bounds-deprecation.scala:2: warning: view bounds are deprecated; use an implicit parameter instead.
  example: instead of `def f[A <% Int](a: A)` use `def f[A](a: A)(implicit ev: A => Int)`
  def f[A <% Int](a: A) = null
          ^
view-bounds-deprecation.scala:3: warning: view bounds are deprecated; use an implicit parameter instead.
  example: instead of `def f[A <% Int](a: A)` use `def f[A](a: A)(implicit ev: A => Int)`
  def g[C, B <: C, A <% B : Numeric](a: A) = null
                     ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
